# filesystem-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  lint.yaml  pre-commit-update.yaml  tests.yaml
scripts/: test.sh
src/filesystem/: __init__.py  server.py  tools.py  utils.py
tests/: test_server.py
