[project]
name = "filesystem-mcp-server"
version = "0.1.0"
description = "MCP server for filesystem operations with Streamable HTTP support"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
filesystem-mcp = "filesystem.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/filesystem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
